# azure-linux-boot-agent

./: BUGS-linux-prov.md  Cargo.toml  README.md  shell.sh
research/: GoalState.1.xml  HostingEnvironmentConfig.xml  SharedConfig.xml  ovf-env.xml  post-Health.xml
src/: agent.rs  goalstate.rs  health.rs  lib.rs  main.rs  metadata.rs  nixoshelper.rs  osutil.rs
tests/: test.rs
