[package]
name = "azure-linux-boot-agent"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1" }
env_logger = { version = "0.7.1" }
log = { version = "0.4.11" }
regex = { version = "1.3.9" }
reqwest = { version = "0.10.6", default-features = false, features = ["json"] }
serde = { version = "1.0.114" }
serde_derive = { version = "1.0.114" }
serde-xml-rs = { version = "0.4.0" }
tempfile = { version = "3.1.0" }
thiserror = { version = "1.0.20" }
tokio = { version = "0.2.22", features = ["full"] } # TODO: Slim this down!
